Resolvendo problemas de Z-index

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -66,6 +66,7 @@ i.bi-instagram, i.bi-linkedin, i.bi-facebook, i.bi-twitter {
     justify-content: center;
     align-items: center;
     padding: 1vh;
+    z-index: 0;
 }
 
 /* Imagem Mascote Rastros de Rua */
