--- a/public/css/mapa.css
+++ b/public/css/mapa.css
@@ -11,6 +11,7 @@
         overflow-y: hidden;
         height: 100%;
         width: 100%;
+        z-index: 999;
 }
 #map,
 #map2{
@@ -26,6 +27,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+}
+.mapaPostFundo{ /*Remove o rato do footer*/
+        z-index: 1000;
 }
 .conteudo-mapa-post{
         display: flex;
