--- a/public/css/modalCriar.css
+++ b/public/css/modalCriar.css
@@ -29,7 +29,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000;
+    z-index: 997;
 }
 .opacidade {
     opacity: 1;
