--- a/public/css/modalExcluir.css
+++ b/public/css/modalExcluir.css
@@ -34,7 +34,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: 1000;
+        z-index: 997;
 }
 
 /* Cabeçalho azul com título e ícone */
