--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -34,7 +34,7 @@ body {
     width: fit-content;
     font-family: "Staatliches", sans-serif;
     position: absolute;
-    z-index: 999;
+    z-index: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
 }
 
